@@ -7,6 +7,7 @@ CruiseControl Release Notes - 2.8-dev
 general
 ======================
 * End of support for compiling/running CruiseControl with JDK 1.4. New earliest supported JDK is 1.5/5.0.
+* Extracted out the utility class ServerNameSingleton to avoid mulitple slow calls to get the host name.
 
 contrib
 ======================
